[gd_scene load_steps=5 format=3 uid="uid://dfsqv1ijiakg2"]

[ext_resource type="PackedScene" uid="uid://c5kypp1cfcmo3" path="res://scenes/pipe/pipe.tscn" id="1_c7nhd"]
[ext_resource type="Script" path="res://scenes/Pipes/pipes.gd" id="1_yjd4k"]
[ext_resource type="PackedScene" uid="uid://bn287ljo66c7" path="res://scenes/laser/laser.tscn" id="2_i8o64"]
[ext_resource type="AudioStream" uid="uid://fl23iykhhjrr" path="res://assets/audio/score.wav" id="3_v27ma"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_yjd4k")

[node name="Laser" parent="." instance=ExtResource("2_i8o64")]

[node name="Upper" parent="." instance=ExtResource("1_c7nhd")]
position = Vector2(0, -80)
rotation = 3.14159

[node name="Lower" parent="." instance=ExtResource("1_c7nhd")]
position = Vector2(0, 80)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(22, 0)

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_v27ma")
volume_db = -6.5

[connection signal="body_entered" from="Laser" to="." method="_on_laser_body_entered"]
[connection signal="body_entered" from="Upper" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Lower" to="." method="_on_pipe_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
